examples/ppdatalog/negative/no_goal_rule.pl
:-type(day(Day: private int, Month: private int, Year: private int)).

:-outputs([DayOfWeek]).
?-day_of_week(DayOfWeek).
